# chess-voting

./: Cargo.toml
src/: chess_piece.rs  db.rs  game.rs  lib.rs  main.rs  utils.rs
src/game/: chess_piece.rs  full_game_tests.rs  tests.rs  validation.rs
src/game/validation/: bishop.rs  check_mate.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
src/types/: game.rs
src/utils/: convert_notation.rs  error.rs  get_fields.rs  make_special_moves.rs  request.rs  response.rs
src/validate_move/: bishop.rs
