[package]
name = "chess-voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
uuid = {version= "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

